src/test/ui/issues/issue-65673.stderr
error[E0277]: the size for values of type `(dyn Trait + 'static)` cannot be known at compilation time
  --> $DIR/issue-65673.rs:9:5
   |
LL |     type Ctx;
   |     --------- required by this bound in `WithType::Ctx`
...
LL |     type Ctx = dyn Alias<T>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn Trait + 'static)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
